2015-02-27  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/65048
	* gcc.dg/tree-ssa/ssa-dom-thread-9.c: Add -std=gnu89 to dg-options.
	(foo): Use K&R style definition.

2015-02-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/65032
	* g++.dg/pr65032.C: New.

2015-02-27  Marek Polacek  <polacek@redhat.com>

	PR c/65040
	* gcc.dg/pr65066.c: Use -Wformat -Wformat-signedness and not
	-Wformat=2.

2015-02-27  Marek Polacek  <polacek@redhat.com>

	PR c/65228
	* gcc.dg/pr65228.c: New test.

2015-02-27  Kai Tietz  <ktietz@redhat.com>

	PR c/35330
	* gcc.dg/weak/weak-17.c: New file.

2015-02-27  Richard Biener  <rguenther@suse.de>

	PR lto/65193
	* g++.dg/lto/pr65193_0.C: New testcase.

2015-02-27  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.target/s390/20140327-1.c: Remove -m31 and guard with ! lp64.
	* gcc.target/s390/hotpatch-8.c: Likewise.
	* gcc.target/s390/hotpatch-9.c: Likewise.
	* gcc.target/s390/pr61078.c: Likewise.
	* gcc.target/s390/pr57960.c: Remove -m64.
	* gcc.target/s390/pr61078.c: Likewise.

2015-02-26  Jan Hubicka  <hubicka@ucw.cz>
	    Martin Liska  <mliska@suse.cz>

	PR bootstrap/65150
	* gcc.dg/pr64454.c: Disable ICF.
	* gcc.dg/pr28685-1.c: Disable ICF
	* gcc.dg/ipa/iinline-5.c: Disable ICF.
	* g++.dg/warn/Wsuggest-final.C: Force methods to be different.
	* g++.dg/ipa/ipa-icf-4.C: Update template.

2015-02-26  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/65216
	* gcc.c-torture/execute/pr65216.c: New test.

	PR tree-optimization/65215
	* gcc.c-torture/execute/pr65215-1.c: New test.
	* gcc.c-torture/execute/pr65215-2.c: New test.
	* gcc.c-torture/execute/pr65215-3.c: New test.
	* gcc.c-torture/execute/pr65215-4.c: New test.
	* gcc.c-torture/execute/pr65215-5.c: New test.

2015-02-26  Tom de Vries  <tom@codesourcery.com>

	* go.test/go-test.exp (go-gc-tests): Add missing cleanup for cmpout.

2015-02-26  Martin Liska  <mliska@suse.cz>
	    Jan Hubicka  <hubicka@ucw.cz>

	* g++.dg/ipa/pr64146.C: Update expected results.